# Coreone

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
claudeoutput/: bounding_sphere_soa.txt  chunk_iterator.txt  ecs_register_cpp.txt  ecs_register_hpp.txt  factory_cpp.txt  factory_hpp.txt  index_map_cpp.txt  index_map_hpp.txt  integrate_motion_cpp.txt  integrate_motion_hpp.txt  job_system_cpp.txt  job_system_hpp.txt  job_system_v3.txt  main_app_cpp.txt  metrics_cpp.txt  metrics_hpp.txt  sim_loop_cpp.txt  sim_loop_hpp.txt  simd_wrapper.txt  system_integrate.txt  transform_soa_cpp.txt  transform_soa_header.txt  transform_soa_impl.txt  velocity_soa_header.txt  velocity_soa_impl.txt
direcives/: cursor_env_setup.md  system_foundations_directives_claude_cursor.md
directives/: claude_nextactions.md  cursor_nextactions.md  trigate.md
directives/reports/: report.md
engine/: CMakeLists.txt
engine/alloc/: arena.cpp  arena.hpp
engine/components/: bounding_sphere_soa.cpp  bounding_sphere_soa.hpp  transform_soa.cpp  transform_soa.hpp  velocity_soa.cpp  velocity_soa.hpp
engine/ecs/: chunk_iter.cpp  chunk_iter.hpp  ecs_register.cpp  ecs_register.hpp  factory.cpp  factory.hpp  index_map.cpp  index_map.hpp
engine/jobs/: job_system.cpp  job_system.hpp
engine/metrics/: metrics.cpp  metrics.hpp
engine/render/: view_stub.cpp  view_stub.hpp
engine/sim/: sim_loop.cpp  sim_loop.hpp
engine/simd/: simd.hpp
engine/systems/: system_integrate.cpp  system_integrate.hpp
tests/: CMakeLists.txt
tests/perf/: perf_smoke.cpp
tests/unit/: ecs_basic.cpp  simd_equivalence.cpp
tools/inspect/: dump_archetypes.cpp
tools/perf/: run_sweeps.bat  run_sweeps.sh
